--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="user-scalable=0, initial-scale=1, minimum-scale=1, maximum-scale=1, width=device-width, minimal-ui=1">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AFKnights</title>
-    <link rel="stylesheet" href="assets/css/main.css"> 
-
   </head>
   <body>
+    <div id="app"></div>
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
